--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "ng build --configuration production"
-  publish = "dist/kennedys-insight"
+  publish = "dist/kennedys-insight/browser"
 
 [[plugins]]
   package = "@netlify/angular-runtime"
